# crewai-quickstart

./: .env.example  .gitignore  README.md  crewship.toml  pyproject.toml
src/crewship_quickstart/: crew.py  main.py
src/crewship_quickstart/config/: agents.yaml  tasks.yaml
